# AlazarAcquisitionSystem

./: .gitignore  ATSApi.lib  AlazarApi.h  AlazarCmd.h  AlazarDSP.h  AlazarError.h  AlazarMeasurer.cpp  AlazarMeasurer.hpp  AlazarRC.h  CMakeLists.txt  LICENSE  main.cpp  measurer.cpp  measurer.hpp
